# ssh-terminal

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-03-24-ssh-terminal-mvp.md
docs/superpowers/specs/: 2026-03-24-ssh-terminal-design.md
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: config.rs  main.rs  server.rs  ssh_session.rs  tray.rs  ws_handler.rs
src/: App.module.css  App.tsx
src/components/: ConnectDialog.module.css  ConnectDialog.tsx  Header.module.css  Header.tsx  SearchBar.module.css  SearchBar.tsx  SessionPanel.module.css  SessionPanel.tsx  Terminal.module.css  Terminal.tsx  TerminalGrid.module.css
src/core/: connectionHistory.ts  keygen.ts  sessionManager.ts  websocket.ts
src/styles/: globals.css
src/types/: ssh.ts
wasm/: Cargo.toml  rust-toolchain.toml
wasm/src/: keygen.rs  lib.rs  search.rs
