[package]
name = "ssh-terminal-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ssh-terminal-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.50.0-beta.7"
russh-keys = "0.50.0-beta.7"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
base64 = "0.22"
tray-icon = "0.19"
tao = "0.33"
image = { version = "0.25", default-features = false, features = ["png"] }
dirs = "6"
toml = "0.8"
